// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Account: Represents an account associated with a company.
Company: Represents a company within the system.
Customer: Represents customers of the company.
CustomerHistory: Represents historical interactions of customers.
Inventory: Represents the inventory records for products.
Product: Represents a product offered by the company.
Order: Represents an order placed by a company.
OrderItem: Represents items within an order.
Payment: Records payments made to the company.
Supplier: Represents suppliers for products.
Supply: Represents supply records from suppliers to the company.
Transaction: Records transactions related to accounts.
'''
}

Table Account {
    id INTEGER [primary key]
    company_id INTEGER 
    account_number VARCHAR 
    balance FLOAT 
    account_type VARCHAR 
    }

Table Company {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    }

Table CustomerHistory {
    id INTEGER [primary key]
    customer_id INTEGER 
    interaction_date DATETIME 
    interaction_detail VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    stock_quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    company_id INTEGER 
    order_date DATETIME 
    total_amount FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    price FLOAT 
    }

Table Payment {
    id INTEGER [primary key]
    customer_id INTEGER 
    payment_date DATETIME 
    amount FLOAT 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact VARCHAR 
    }

Table Supply {
    id INTEGER [primary key]
    supplier_id INTEGER 
    product_id INTEGER 
    supply_date DATETIME 
    quantity_supplied INTEGER 
    }

Table Transaction {
    id INTEGER [primary key]
    account_id INTEGER 
    transaction_date DATETIME 
    amount FLOAT 
    }



// Relationships
    Ref: Account.(company_id) < Company.(id)
    Ref: CustomerHistory.(customer_id) < Customer.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Order.(company_id) < Company.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: Payment.(customer_id) < Customer.(id)
    Ref: Supply.(product_id) < Product.(id)
    Ref: Supply.(supplier_id) < Supplier.(id)
    Ref: Transaction.(account_id) < Account.(id)
